--- a/package.json
+++ b/package.json
@@ -18,16 +18,10 @@
     "@editorjs/link": "^2.6.2",
     "@editorjs/list": "^2.0.8",
     "@editorjs/underline": "^1.2.1",
-    "alpinejs": "^3.15.0",
-    "ejs": "^3.1.10",
-    "ejs-mate": "^4.0.0",
     "express": "^5.1.0",
-    "njk": "^6.0.0",
-    "nunjucks": "^3.2.4",
-    "pug": "^3.0.3"
+    "nunjucks": "^3.2.4"
   },
   "devDependencies": {
-    "nodemon": "^3.1.9",
-    "vite": "^7.1.7"
+    "nodemon": "^3.1.9"
   }
 }
