--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@editorjs/list": "^2.0.8",
     "@editorjs/underline": "^1.2.1",
     "express": "^5.1.0",
-    "nunjucks": "^3.2.4"
+    "nunjucks": "^3.2.4",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
