finalized blog upload and view flow with upload blog thumbnail

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@editorjs/list": "^2.0.8",
     "@editorjs/underline": "^1.2.1",
     "express": "^5.1.0",
+    "express-fileupload": "^1.5.2",
     "nunjucks": "^3.2.4",
     "slugify": "^1.6.6"
   },
