--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "@editorjs/link": "^2.6.2",
     "@editorjs/list": "^2.0.8",
     "@editorjs/underline": "^1.2.1",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "express-fileupload": "^1.5.2",
+    "mysql2": "^3.15.3",
     "nunjucks": "^3.2.4",
+    "sequelize": "^6.37.7",
     "slugify": "^1.6.6"
   },
   "devDependencies": {
