--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
   "name": "noteroom-blog",
   "version": "1.0.0",
-  "main": "index.js",
-  "type": "commonjs",
   "scripts": {
-    "start": "nodemon server/server.js"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "ejs": "^3.1.10",
-    "express": "^5.1.0"
+    "next": "latest",
+    "react": "latest",
+    "react-dom": "latest"
   },
-  "devDependencies": {
-    "nodemon": "^3.1.9"
-  }
+  "devDependencies": {}
 }
