--- a/package.json
+++ b/package.json
@@ -4,27 +4,15 @@
   "main": "index.js",
   "type": "commonjs",
   "scripts": {
-    "start": "nodemon server/server.js",
-    "dev": "vite",
-    "build": "vite build"
+    "start": "nodemon server/server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@editorjs/editorjs": "^2.31.0",
-    "@editorjs/header": "^2.8.8",
-    "@editorjs/link": "^2.6.2",
-    "@editorjs/list": "^2.0.8",
-    "@editorjs/underline": "^1.2.1",
-    "dotenv": "^17.2.3",
-    "express": "^5.1.0",
-    "express-fileupload": "^1.5.2",
-    "mysql2": "^3.15.3",
-    "nunjucks": "^3.2.4",
-    "sequelize": "^6.37.7",
-    "slugify": "^1.6.6"
+    "ejs": "^3.1.10",
+    "express": "^5.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
