--- a/noteroom/package.json
+++ b/noteroom/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
-    "publish-blog": "tsx scripts/publish-blog.ts"
+    "publish-blog": "tsx scripts/publish-blog.ts",
+    "publish-all-blogs": "tsx scripts/publish-all-blogs.ts"
   },
   "dependencies": {
     "clsx": "^2.1.1",
