--- a/noteroom/package.json
+++ b/noteroom/package.json
@@ -14,6 +14,7 @@
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.26.2",
+    "gsap": "^3.14.2",
     "mongoose": "^9.1.3",
     "next": "16.1.2",
     "ogl": "^1.0.11",
