--- a/noteroom/package.json
+++ b/noteroom/package.json
@@ -11,6 +11,7 @@
     "publish-all-blogs": "tsx scripts/publish-all-blogs.ts"
   },
   "dependencies": {
+    "@types/three": "^0.182.0",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.26.2",
@@ -20,7 +21,8 @@
     "ogl": "^1.0.11",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "slugify": "^1.6.6"
+    "slugify": "^1.6.6",
+    "three": "^0.182.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
