--- a/noteroom/package.json
+++ b/noteroom/package.json
@@ -11,11 +11,14 @@
     "publish-all-blogs": "tsx scripts/publish-all-blogs.ts"
   },
   "dependencies": {
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.5.0",
     "@types/three": "^0.182.0",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.26.2",
     "gsap": "^3.14.2",
+    "maath": "^0.10.8",
     "mongoose": "^9.1.3",
     "next": "16.1.2",
     "ogl": "^1.0.11",
